# CambioMinimax

./: CMakeLists.txt  README.md  run.py
src/: AI.cpp  AI.h  Card.cpp  Card.h  Deck.cpp  Deck.h  Game.cpp  Game.h  Hand.cpp  Hand.h  Player.cpp  Player.h  Source.cpp  ViewInput.cpp  ViewInput.h
